apps/home-assistant/helm/service_home-assistant.yaml
---
# Source: home-assistant/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  labels:
    helm.sh/chart: home-assistant-0.2.116
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/version: 2025.4.1
    app.kubernetes.io/managed-by: Helm
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/instance: home-assistant
